# Vandyhacks-Linter-Backend

./: app.js  compile_api.js  gcp.js  index.html  index2.html  keys.json  package-lock.json  package.json  parseAndMap.js  scoreAlgorithm.js  style.css  team.html
cpp/: CMakeLists.txt  CompileCheck  CompileCheck.cpp  Makefile  Scripting  Scripting.cpp  compile.sh  cppcheck  main.cpp  main.out
